src/objects/Apttus__AgreementEvent__e.object
<CustomObject>
    <description>Agreement lifecycle event</description>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <description>Agreement Id</description>
        <label>Agreement Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ContextId__c</fullName>
        <description>Other Record Id used for current context</description>
        <label>Context Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentId__c</fullName>
        <description>Document Id</description>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentName__c</fullName>
        <description>Document Name</description>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ErrorMessage__c</fullName>
        <description>Error Message</description>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__MessageDetail__c</fullName>
        <description>Message Detail</description>
        <label>Message Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__MessageStatus__c</fullName>
        <description>Message Status</description>
        <label>Message Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__SuccessMessage__c</fullName>
        <description>Success Message</description>
        <label>Success Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Type__c</fullName>
        <description>Type</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__WarningMessage__c</fullName>
        <description>Warning Message</description>
        <label>Warning Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Agreement Event</label>
    <pluralLabel>Agreement Events</pluralLabel>
</CustomObject>